--- a/README
+++ b/README
@@ -1,1 +1,10 @@
-README
+# 支語警察的日常
+
+
+komica綜合版的島民
+上傳二創的支語警察頭像
+扮演支語警察之間的互動
+很豪丸
+
+備份
+https://web.archive.org/web/20200418044649/http://sora.komica.org/00/pixmicat.php?res=18193077
