--- a/README
+++ b/README
@@ -8,3 +8,6 @@ komica綜合版的島民
 
 備份
 https://web.archive.org/web/20200418044649/http://sora.komica.org/00/pixmicat.php?res=18193077
+
+這個git庫有提供 線上版本
+https://kisland291.github.io/police/index.htm
